@@ -9,38 +9,38 @@
   <stations>
 
     <!-- https://uk.wikipedia.org/wiki/Холодногірсько-Заводська_лінія -->
-    <station id="1-01" name="Холодна гора" line="1" link="1-02"/>
-    <station id="1-02" name="Південний вокзал" line="1" link="1-01,1-03"/>
-    <station id="1-03" name="Центральний ринок" line="1" link="1-02,1-04"/>
-    <station id="1-04" name="Радянська" line="1" link="1-03,1-05,2-08"/>
-    <station id="1-05" name="Проспект Гагаріна" line="1" link="1-04,1-06"/>
-    <station id="1-06" name="Спортивна" line="1" link="1-05,1-07,3-08"/>
-    <station id="1-07" name="Завод імені Малишева" line="1" link="1-06,1-08"/>
-    <station id="1-08" name="Московський проспект" line="1" link="1-07,1-09"/>
-    <station id="1-09" name="Маршала Жукова" line="1" link="1-08,1-10"/>
-    <station id="1-10" name="Радянської армії" line="1" link="1-09,1-11"/>
-    <station id="1-11" name="Імені О.С. Масельського" line="1" link="1-10,1-12"/>
-    <station id="1-12" name="Тракторний завод" line="1" link="1-11,1-13"/>
-    <station id="1-13" name="Пролетарська" line="1" link="1-12"/>
+    <station id="1-01" name="Холодна гора" line="1:1" link="1-02"/>
+    <station id="1-02" name="Південний вокзал" line="1:2" link="1-01,1-03"/>
+    <station id="1-03" name="Центральний ринок" line="1:3" link="1-02,1-04"/>
+    <station id="1-04" name="Радянська" line="1:4" link="1-03,1-05,2-08"/>
+    <station id="1-05" name="Проспект Гагаріна" line="1:5" link="1-04,1-06"/>
+    <station id="1-06" name="Спортивна" line="1:6" link="1-05,1-07,3-08"/>
+    <station id="1-07" name="Завод імені Малишева" line="1:7" link="1-06,1-08"/>
+    <station id="1-08" name="Московський проспект" line="1:8" link="1-07,1-09"/>
+    <station id="1-09" name="Маршала Жукова" line="1:9" link="1-08,1-10"/>
+    <station id="1-10" name="Радянської армії" line="1:10" link="1-09,1-11"/>
+    <station id="1-11" name="Імені О.С. Масельського" line="1:11" link="1-10,1-12"/>
+    <station id="1-12" name="Тракторний завод" line="1:12" link="1-11,1-13"/>
+    <station id="1-13" name="Пролетарська" line="1:13" link="1-12"/>
 
     <!-- https://uk.wikipedia.org/wiki/Салтівська_лінія -->
-    <station id="2-01" name="Героїв Праці" line="2" link="2-02"/>
-    <station id="2-02" name="Студентська" line="2" link="2-01,2-03"/>
-    <station id="2-03" name="Академіка Павлова" line="2" link="2-02,2-04"/>
-    <station id="2-04" name="Академіка Барабашова" line="2" link="2-03,2-05"/>
-    <station id="2-05" name="Київська" line="2" link="2-04,2-06"/>
-    <station id="2-06" name="Пушкінська" line="2" link="2-05,2-07"/>
-    <station id="2-07" name="Університет" line="2" link="2-06,2-08,3-05"/>
-    <station id="2-08" name="Історичний музей" line="2" link="1-04,2-07"/>
+    <station id="2-01" name="Героїв Праці" line="2:1" link="2-02"/>
+    <station id="2-02" name="Студентська" line="2:2" link="2-01,2-03"/>
+    <station id="2-03" name="Академіка Павлова" line="2:3" link="2-02,2-04"/>
+    <station id="2-04" name="Академіка Барабашова" line="2:4" link="2-03,2-05"/>
+    <station id="2-05" name="Київська" line="2:5" link="2-04,2-06"/>
+    <station id="2-06" name="Пушкінська" line="2:6" link="2-05,2-07"/>
+    <station id="2-07" name="Університет" line="2:7" link="2-06,2-08,3-05"/>
+    <station id="2-08" name="Історичний музей" line="2:8" link="1-04,2-07"/>
 
     <!-- https://uk.wikipedia.org/wiki/Олексіївська_лінія -->
-    <station id="3-01" name="Олексіївська" line="3" link="3-02"/> 
-    <station id="3-02" name="23 Серпня" line="3" link="3-01,3-03"/>
-    <station id="3-03" name="Ботанічний сад" line="3" link="3-02,3-04"/>
-    <station id="3-04" name="Наукова" line="3" link="3-03,3-05"/>
-    <station id="3-05" name="Держпром" line="3" link="2-07,3-04,3-06"/>
-    <station id="3-06" name="Архітектора Бекетова" line="3" link="3-05,3-07"/>
-    <station id="3-07" name="Площа Повстання" line="3" link="3-06,3-08"/>
-    <station id="3-08" name="Метробудівників імені Ващенка" line="3" link="1-06,3-07"/>
+    <station id="3-01" name="Олексіївська" line="3:1" link="3-02"/> 
+    <station id="3-02" name="23 Серпня" line="3:2" link="3-01,3-03"/>
+    <station id="3-03" name="Ботанічний сад" line="3:3" link="3-02,3-04"/>
+    <station id="3-04" name="Наукова" line="3:4" link="3-03,3-05"/>
+    <station id="3-05" name="Держпром" line="3:5" link="2-07,3-04,3-06"/>
+    <station id="3-06" name="Архітектора Бекетова" line="3:6" link="3-05,3-07"/>
+    <station id="3-07" name="Площа Повстання" line="3:7" link="3-06,3-08"/>
+    <station id="3-08" name="Метробудівників імені Ващенка" line="3:8" link="1-06,3-07"/>
   </stations>
 </tube>
